<resources>
    <string name="app_name">Shoe Store</string>
    <string name="sign_up">First time here? Sign up</string>
    <string name="log_in">Log in</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="happy">We are happy to have you here!</string>
    <string name="shoe_inventory">Talehz Shoes</string>
    <string name="name_hint">username</string>
    <string name="password_hint">password</string>
    <string name="instruction">Here we show you how to navigate the store. This app teaches you about the different kinds of shoes we have, how to use them, the best time to use them and their various prices. Click on the button below to view the list of shoes in our store.
    Please note that the text fields must be filled completely in order to avoid errors while using this app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_tosee">Click to see the shoe rack</string>
    <string name="see_instruction">See Instruction</string>
    <string name="instruct">Instruction</string>
    <string name="view_instruction">View Instruction</string>
    <string name="skip_instruction">skip instruction</string>
    <string name="brand_name">Brand Name</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_description">shoe description</string>
    <string name="shoe_size">shoe size</string>
    <string name="log_out">Log out</string>

</resources>
